available (#3295).


4. Application module
---------------------
The reading and writing of the parameter file in GApplicationPars::read()
and GApplicationPars::write() was put in an OpenMP critical zone to assure
that the reading and writing is thread safe (#3287).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
The flux() and eflux() methods of the GModelSpectralBrokenPlaw class returned
a value of zero if one of the energy boundaries was identical to the break
energy. The reason was an incomplete coverage of the possible conditions that
left this special case out of the computation. This is fixed now (#3279).


9. Numerics module
------------------
None


10. Observation module
----------------------
None


11. Optimization module
-----------------------
None


12. Sky module
--------------
The region files written by GSkyRegions were not readable by ds9 when region
names were specified. It turned out that region names have to be put in quotes,
either ", ' or {}. I modified the GSkyRegionCircle::read() and write() methods
to support this logic, where {} are used in GSkyRegionCircle::write() (#3280).


13. Support module
------------------
Pre-compute number of XML elements in gammalib::xml_need_par() and
gammalib::xml_has_par() methods (#3308).


14. XML module
--------------
Avoid dynamic type casting and unnecessary computation of the number of elements
in GXmlNode::element(std::string,int) method (#3308).


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
-----------------------
None


20. CTA interface
-----------------
None


21. COMPTEL interface
---------------------
None


22. INTEGRAL/SPI interface
--------------------------
None